// - Fail when:
//   - there is no "== Unreleased" section header
//   - or the section contains no descriptive text
// - Replace the Unreleased section header with actual release version
// - Prepend a new Unreleased section header

== Unreleased

* Bump deps
* Explicitly exit to compensate for libs that start threads on ns load
https://github.com/cljdoc/cljdoc-analyzer/issues/118[#118]

== v1.0.827

* Bump deps

== v1.0.818

* Bump deps

== v1.0.815

* Bump deps

== v1.0.812

* bump cljdoc-shared

== v1.0.808

* ci: bump from JDK 23 to JDK 24 (to verify all is good on JDK 24)
* Bump deps

== v1.0.802

* ci: bump from JDK 21 to JDK 23 (to verify all is good on JDK 23)
* Bump deps

== v1.0.792

* Bump cljdoc-shared

== v1.0.789

* Bump deps

== v1.0.784

* For Clojure analysis, exclude ns `x` defined in `.cljc` source if it is already defined in `.clj` source.
https://github.com/cljdoc/cljdoc-analyzer/issues/101[#101]
* Bump deps

== v1.0.779

* Fix regression: its ok for an artifact to have no Clojure sources
https://github.com/cljdoc/cljdoc-analyzer/issues/98[#98]

== v1.0.776

* Fix regression in ClojureScript analysis of zprint (and perhaps for other libs that use sci)
https://github.com/cljdoc/cljdoc-analyzer/issues/95[#95]

== v1.0.771

* Support analysis of clojure itself (v1.7+)
https://github.com/cljdoc/cljdoc-analyzer/issues/53[#53]
* Internal :namespaces option now applied before analysis
https://github.com/cljdoc/cljdoc-analyzer/issues/92[#92]

== v1.0.759

* Bump deps
* Referenced maven repos now auto-upgraded to https
https://github.com/cljdoc/cljdoc-analyzer/issues/87[#87]
* Fix: analysis duration reporting could throw
https://github.com/cljdoc/cljdoc-analyzer/issues/89[#89]

== v1.0.750

* ClojureScript analysis should now be able to handle analyzing libs with deps that use JavaScript requires
https://github.com/cljdoc/cljdoc-analyzer/issues/84[#84]
* Artifacts that reference non-default maven repos now analyze properly for user-facing cmd line